# cmake_msys2_project

./: CMakeLists.txt  README.MD  build.sh
ais_std/: CMakeLists.txt  main.c
ais_std/sum/: CMakeLists.txt  sum.c
deploy/lib/ais_std/sum/: sumtool.lib
include/ais_std/sum/: sum.h
test/add/: CMakeLists.txt  main.c
